# nlp-project

./: README.md  main.py  pyproject.toml
data/archive/: en_id2token.json  en_token2id.json  spm_en.model  spm_en.vocab  spm_vi.model  spm_vi.vocab  vi_id2token.json  vi_token2id.json
data/cleaned/: en_id2token.json  en_token2id.json  test.csv  vi_id2token.json  vi_token2id.json
data/raw/vlsp/test-en/: test.en.new.txt
data/raw/vlsp/test-vi/: test.vi.new.txt
data/raw/vlsp/val-en/: val.en.new.txt
data/raw/vlsp/val-vi/: val.vi.new.txt
src/: NLP_EDA_Preprocess.ipynb  Transformer.ipynb  nlp-preprocessing-VLSP-data.ipynb  nlp-transformer-VLSP-v1-v2010c3d9978.ipynb  nlp-transformer-v1-v2__VI-EN.ipynb
